<resources>
    <string name="app_name">eMission</string>
    <string name="facebook_app_id">250420315633894</string>
    <string name="maps_api_key">AIzaSyCK_uf4mNuM2snhfshXY2K124Oukzv6WKQ</string>
    <string name="table_category1">Beef</string>
    <string name="table_category2">Pork</string>
    <string name="table_category3">Chicken</string>
    <string name="table_category4">Fish</string>
    <string name="table_category5">Eggs</string>
    <string name="table_category6">Beans</string>
    <string name="table_category7">Vegetables</string>
    <string name="toolbar_about">The Green Food Challenge</string>
    <string name="toolbar_calculator">CO2e Calculator</string>
    <string name="toolbar_history">CO2e Result</string>
    <string name="toolbar_reduce">Reduce your CO2e with an alternate plan</string>
    <string name="toolbar_pledges">Pledges</string>
    <string name="toolbar_pledge_list">Worldwide Pledges</string>
    <string name="toolbar_pledge_create">Make your own pledge!</string>
    <string name="toolbar_meal_list">Community Green Challenge Meals</string>
    <string name="toolbar_meal_create">Share your own meal!</string>
    <string name="popup_header_meal_detail">Meal Details</string>
    <string name="toolbar_settings">Settings</string>
    <string name="toolbar_map">Green Meal Locations</string>
    <string-array name="presets_array">
        <item>Select a Preset Diet</item>
        <item>Balanced Diet</item>
        <item>Vegetarian</item>
        <item>Vegan</item>
        <item>High Meat Diet</item>
        <item>High Beef Diet</item>
        <item>High Chicken Diet</item>
        <item>High Pork Diet</item>
        <item>High Fish Diet</item>
    </string-array>
    <string name="fablabel_submit">Submit</string>
    <string name="fablabel_add_meal">Add meal</string>
    <string name="fablabel_add_pledge">Make a pledge</string>
    <string name="button_reduce_footprint">Reduce my carbon footprint</string>
    <string name="button_make_pledge">Make a pledge</string>
    <string name="button_view_pledge_list">See who\'s pledged</string>
    <string name="button_publish_pledge">Publish your pledge</string>
    <string name="button_share_pledge">Share your pledge</string>
    <string name="button_update_pledge">Update your pledge</string>
    <string name="button_remove_pledge">Remove your pledge</string>
    <string name="button_location">Give Location</string>
    <string name="button_login">Log In</string>
    <string name="button_signup">Sign Up</string>
    <string name="button_logout">Log Out</string>
    <string name="hint_search_box">Search...</string>
    <string name="history_chart_label">CO2e Calculator Totals</string>
    <string name="no_data_saved">No data available for this month</string>
    <string name="snackbar_history_element">Day %d CO2e total: %,.2f</string>
    <string name="snackbar_delete">Delete</string>
    <string name="survey_explanation">Approximate How many grams of each food type do you eat daily in an average week?</string>
    <string name="label_age">Enter Age:</string>
    <string name="label_gender">Enter Gender:</string>
    <string name="radio_male">M</string>
    <string name="radio_female">F</string>
    <string name="label_foodtype">Food type</string>
    <string name="label_foodamount">Amount in grams (Daily)</string>
    <string name="label_selectpreset">Choose a preset diet</string>
    <string name="label_totalgrams">Total</string>
    <string name="label_placeholder_gram_amt">0</string>
    <string name="label_totalneeded">Total Needed</string>
    <string name="textview_world_pledge_summary">
        tonnes of CO2e pledged to be saved by %,d worldwide.\n
        That\'s %,.2f tonnes of CO2e per person!
    </string>
    <string name="textview_world_breakdown_summary">
        Together, we\'ve saved:\n
        %,d Acres of forests\n
        %,d Gallons of gasoline\n
        %,d Km of driving eMission™
    </string>
    <string name="facebook_share_quote">
        I challenge everyone from %s
        to the Green Food Challenge! 
        Try to beat my pledge of %s
        tonnes of CO2e reduced!\n
    </string>
    <string name="old_plan">Old Plan</string>
    <string name="new_plan">New Plan</string>
    <string name="meal_plan_introduction">Choose a replacement meal plan!</string>
    <string name="meal_plan_savings">You will save %,.1f kg CO2e per year</string>
    <string name="meal_plan_collective_savings">If everyone in Metro Vancouver implemented these
        changes, together we could save %,.1f kg CO2e per year!
        \n\nThat\'s the same carbon footprint as driving %,d km!</string>
    <string name="meal_plan_negative_savings_toast">You\'d be saving more by sticking with your current plan!</string>
    <string-array name="reduce_meal_plan_list">
        <item>Chicken Only</item>
        <item>Reduce your meat consumption by half</item>
        <item>Fish Only</item>
        <item>Vegan</item>
    </string-array>
    <string name="select_meal_plan_prompt">Choose a meal plan!</string>
    <string name="pledge_list_text">View the pledges made so far!</string>
    <string name="pledge_filter_label">Sort by...</string>
    <string name="filter_prompt">Filter by...</string>
    <string-array name="pledge_list_filters">
        <item>Filter by</item>
        <item>First Name</item>
        <item>City</item>
        <item>Pledge Amount</item>
    </string-array>
    <string name="anonymous_name">Anonymous</string>
    <string-array name="meal_list_filters">
        <item>Filter by</item>
        <item>Name</item>
        <item>Protein Type</item>
        <item>Location</item>
        <item>Image</item>
    </string-array>
    <string name="input_first_name">First Name</string>
    <string name="input_last_name">Last Name</string>
    <string name="input_municipality">Municipality</string>
    <string name="input_pledge_amount_descriptor">CO2e reduction pledge:</string>
    <string name="input_pledge_amount">#</string>
    <string name="checkbox_showname_descriptor">Show my name next to my pledge</string>
    <string name="pledge_published">Your pledge has successfully been published.</string>
    <string name="pledge_already_exists">You have already made a pledge. Try clicking the "Change my pledge" button.</string>
    <string name="pledge_does_not_exist">There is no pledge associated with this account. Please make a pledge first.</string>
    <string name="pledge_removed">Pledge removed</string>
    <string name="pledge_updated">Pledge updated</string>
    <string name="textview_meal_list_description">View all community submitted meals!</string>
    <string name="checkbox_show_my_meals">Only show my meals</string>
    <string name="button_add_meal">Add a meal</string>
    <string-array name="months_array">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
    <string name="text_view_placeholder">Could not load results.</string>
    <string name="empty_username_message">Please enter an email</string>
    <string name="empty_password_message">Please fill in password</string>
    <string name="empty_firstname_message">Please enter your first name</string>
    <string name="empty_lastname_message">Please enter your last name</string>
    <string name="empty_pledge_message">Please enter a pledge amount</string>
    <string name="error_user_not_logged_in">No logged in user detected. Please make sure you are logged in before submitting.</string>
    <string name="error_bad_pledge_format">Please enter a numerical value greater than 0 for the pledge</string>
    <string name="error_bad_number_format">Please enter a numerical value</string>
    <string name="error_empty_survey">Can\'t submit empty survey</string>
    <string name="error_short_password">Password must be at least 6 characters</string>
    <string name="menu_nav_calculator">CO2e Calculator</string>
    <string name="menu_nav_pledge">Pledges</string>
    <string name="menu_nav_history">History</string>
    <string name="menu_nav_about">Learn More</string>
    <string name="menu_title_network">Community</string>
    <string name="menu_nav_map">Meal Map</string>
    <string name="menu_nav_community">View All Pledges</string>
    <string name="menu_nav_meals">View Meals</string>
    <string name="about_text_1">
    As Canadians, we often think of ourselves as surrounded by nature and thoughtful about the environment.
    Indeed, Vancouver has spearheaded the Greenest City Action Plan since 2011, with the goal of becoming the greenest city in the world by 2020.
    Of the plan’s 10 specific goals, and one of the goals is for a lighter footprint, reducing Vancouver\'s carbon footprint by 33% over 2006 levels.\n</string>
    <string name="about_text_header1">What is a carbon footprint\n</string>
    <string name="about_text_2">
    Greenhouse gases, measured in CO2e (CO2 equivalents), are known to directly contribute to climate change, and include carbon dioxide, methane, and nitrous oxide.
    In 2015, regional emissions in Metro Vancouver were projected to be 14.9 million tonnes of CO2e, between 6-8 tonnes per capita.
    In other words, we can then say that our personal carbon footprint is about 6-8 tonnes of CO2e.
    However, it is generally estimated that global emissions must be reduced to approximately 2 tonnes per capita by 2050.\n</string>
    <string name="about_text_header2">What contributes to greenhouse gases\n</string>
    <string name="about_text_3">
    There are many CO2e contributors to our carbon footprint, including transportation and buildings (commercial, residential).
    Municipalities and businesses are currently 2 undertaking measures to reduce their footprints.
    For example, Metro Vancouver transit can be promoted over cars, and buildings are changing their heating systems from natural gas to hydroelectric.\n
    \n
    Despite these efforts at the governmental level, at the current pace of change, it is unlikely we will meet the 2020 target.
    What else can we do to mitigate climate change? Aside from 3 taking transit, is there anything else we can do as individuals?\n</string>
    <string name="about_text_header3">The carbon impact of food\n</string>
    <string name="about_text_4">
    Food is generally under-reported as a source of CO2e. For instance, in Europe, agriculture contributes to 10% of the carbon footprint.
    In particular, ruminants such as sheep and cows produce methane through enteric fermentation (i.e. they pass gas) and produce more CO2e than other types of animals.
    According to the European Commission, the vast majority of methane emissions (85%) come from ruminants’ digestion. Certain foods take more CO2e to produce than others.\n</string>
    <string name="about_text_header4">A Low Carbon Diet\n</string>
    <string name="about_text_5">
    There are 2.46 million people living in the Metro Vancouver area, and about 90% of them eat food that are relatively high in CO2e (i.e., are non-vegetarian).
    If each of those people, for instance, reduced beef/lamb from 35% to 10% and instead ate chicken, Vancouver could save 900,000 to 1 million tonnes of CO2e per year.\n</string>
    <string name="graph_description">this is about page graph thing</string>
    <string name="logo_description">This is the logo at the top</string>
    <string name="aboutpic1_desc">This shows ghg emission sources</string>
    <string name="aboutpic2_desc">This shows emission sources more in depth</string>
    <string name="aboutpic3_desc">This shows how food emissions are so high</string>
    <string name="join_the_green_food_challenge">Join the Green Food Challenge</string>
</resources>