<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_calculator"
            android:icon="@drawable/baseline_format_list_numbered_rtl_24"
            android:title="@string/menu_nav_calculator" />
        <item
            android:id="@+id/nav_pledge"
            android:icon="@drawable/baseline_pan_tool_24"
            android:title="@string/menu_nav_pledge" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/baseline_timeline_24"
            android:title="@string/menu_nav_history" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/baseline_info_24"
            android:title="@string/menu_nav_about" />
    </group>

    <item android:title="@string/menu_title_network">
        <menu>
            <item
                android:id="@+id/nav_community"
                android:icon="@drawable/baseline_pan_tool_24"
                android:title="@string/menu_nav_community" />
            <item
                android:id="@+id/nav_map"
                android:icon="@drawable/icon_drawer_map"
                android:title="@string/menu_nav_map"
                />
            <item
                android:id="@+id/nav_meals"
                android:icon="@drawable/baseline_fastfood_24"
                android:title="@string/menu_nav_meals" />
        </menu>
    </item>

</menu>
