<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    >

    <LinearLayout
        android:id="@+id/button_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:weightSum="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/meal_plan_introduction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/meal_plan_introduction" />

        <Spinner
            android:id="@+id/reduce_meal_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="?attr/colorButtonNormal" />

        <com.github.mikephil.charting.charts.HorizontalBarChart
            android:id="@+id/meal_plan_co2e_chart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="0.3"/>

        <TextView
            android:id="@+id/meal_plan_savings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/text_view_placeholder"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/meal_plan_collective_savings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="0.3"
            android:textSize="15sp"
            android:text="@string/text_view_placeholder" />

        <Button
            android:id="@+id/join_the_green_food_challenge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/join_the_green_food_challenge" />

    </LinearLayout>






</android.support.constraint.ConstraintLayout>
