<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="495dp"
        android:orientation="vertical"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">

        <TextView
            android:id="@+id/user_info_view"
            android:drawableStart="@mipmap/ic_launcher_round"
            android:drawablePadding="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_view_placeholder" />

        <Button
            android:id="@+id/button_share_pledge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_share_pledge" />

        <Button
            android:id="@+id/button_publish_pledge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_publish_pledge" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>

<!--
<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical" >

        //android:src="@drawable/message_selected"

    </LinearLayout>

    <Button
        android:id="@+id/publishpledgebutton"
        android:layout_width="285dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="43dp"
        android:layout_marginBottom="17dp"
        android:text="Publish your pledge!" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="83dp"
        android:layout_height="82dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="50dp"
        app:srcCompat="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/UserInformation"
        android:layout_width="208dp"
        android:layout_height="80dp"
        android:layout_alignTop="@+id/imageView2"
        android:layout_alignParentStart="true"
        android:layout_marginStart="126dp"
        android:layout_marginTop="0dp"
        android:text="TextView" />

    <TextView
        android:id="@+id/PledgeAmount"
        android:layout_width="304dp"
        android:layout_height="104dp"
        android:layout_alignStart="@+id/imageView2"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="153dp"
        android:text="TextView" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="-126dp"
        android:layout_marginBottom="207dp"
        android:layout_toStartOf="@+id/UserInformation"
        android:text="Show name for pledge" />

    <Button
        android:id="@+id/sharepledgebutton"
        android:layout_width="285dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/publishpledgebutton"
        android:layout_alignStart="@+id/publishpledgebutton"
        android:layout_marginBottom="0dp"
        android:text="Share your pledge!" />

</RelativeLayout>-->
